# pad-station-v1

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  bun.lockb  ecosystem.config.js  install.ps1  install.sh  package-lock.json  package.json  pad-station.service  pyproject.toml  run.bat  run.py  run.sh  uninstall.sh
app/: config.py  (+7 more)
backend/: README.md  pyproject.toml
backend/app/: config.py  dc_motor.py  exceptions.py  hardware.py  ignition.py  load_cell.py  main.py  models.py  pilot_valve.py  pressure_transducer.py  thermocouple.py  valve.py
backend/app/actuators/: ignition.py  pilot_valve.py  relay.py  servo.py  valve.py
backend/app/comms/: exceptions.py  hardware.py  models.py  packets.py  rs422.py
backend/app/comms/IRIS/: iris.py  iris_event_handler.py  iris_interface.py  iris_packet.py  iris_rs422.py  iris_serial.py  iris_status.py  mvp_packets.py
backend/app/sensors/: load_cell.py  load_cell_bkp.py  pressure_transducer.py  thermocouple.py
backend/backend/: config.py  main.py
backend/backend/actuators/: abstractActuator.py  activeVent.py  actuator.py  dcMotor.py  dcMotorMC.py  hanbayValve.py  pilotValve.py  pilotValveMc.py  relay.py  servo.py  servoMC.py
backend/backend/control/: abstractSystemController.py  automaticFillController.py  fillAlgoController.py  labjack.py  motorController.py  newStreamingLoggingController.py  padStationController.py  streamingLoggingController.py
backend/backend/labjackHardware/: labjack.py
backend/backend/sensors/: abstractLabjackSensors.py  abstractMotorControllerSensors.py  abstractSensors.py  capFill.py  dcMotorLimitSwitchSensor.py  dcMotorStateSensor.py  hanbayValveFeedbackSensor.py  limitSwitchMC.py  loadCell.py  pressureTransducer.py  pressureTransducerMC.py  thermocouple.py  thermocoupleMC.py
backend/backend/util/: config.py  constants.py
backend/logs/2024-08-16_23-57-46/load_cell/: test_stand.csv
backend/logs/2024-08-16_23-57-46/pressure/: chamber.csv  tank_top.csv
backend/logs/2024-08-16_23-57-46/thermocouple/: tank_thermocouple.csv
backend/logs/2024-10-11_02-39-39/load_cell/: test_stand.csv
backend/logs/2024-10-11_02-39-39/pressure/: fill.csv  supply.csv
backend/logs/2024-10-11_04-43-33/load_cell/: test_stand.csv
backend/logs/load_cell/: test_stand_2024-07-21_08-13-21.csv  test_stand_2024-07-26_11-56-09.csv
(+76 files in other folders)
