[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A FastAPI backend application"
authors = ["RachitTamrakar <Rtam0011@student.monash.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
labjack-ljm = "^1.23.0"
numpy = "^2.1.2"
websockets = "^10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"